--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-/node_modules
-/.idea
+# Node modules
+node_modules
+package-lock.json
+
+# Adonis directory for storing tmp files
+tmp
+
+# Environment variables, never commit this file
+.env
+
+# The development sqlite file
+database/development.sqlite
