--- a/package.json
+++ b/package.json
@@ -1,19 +1,38 @@
 {
-  "name": "megachedule",
-  "version": "1.0.0",
-  "description": "schedule automatic",
+  "name": "megaads-schedule",
+  "version": "4.1.0",
+  "adonis-version": "4.1.0",
+  "description": "The fullstack application boilerplate for Adonisjs. MegaAds Schedule",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "test": "node ace test"
   },
   "keywords": [
+    "adonisjs",
     "megaads",
     "schedule"
   ],
-  "author": "megaads",
-  "license": "ISC",
+  "author": "tuananhzippy <kieutuananh1995@gmail.com>",
+  "license": "MIT",
+  "private": true,
   "dependencies": {
+    "@adonisjs/ace": "^5.0.8",
+    "@adonisjs/auth": "^3.0.7",
+    "@adonisjs/bodyparser": "^2.0.5",
+    "@adonisjs/cors": "^1.0.6",
+    "@adonisjs/fold": "^4.0.8",
+    "@adonisjs/framework": "^5.0.9",
+    "@adonisjs/ignitor": "^2.0.8",
+    "@adonisjs/lucid": "^5.0.4",
+    "@adonisjs/session": "^1.0.25",
+    "@adonisjs/shield": "^1.0.8",
+    "mysql": "^2.16.0",
     "node-schedule": "^1.1.1",
     "request": "^2.74.0"
+  },
+  "devDependencies": {},
+  "autoload": {
+    "App": "./app"
   }
 }
