--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^5.0.4",
+    "@adonisjs/mail": "^3.0.9",
     "@adonisjs/session": "^1.0.25",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/websocket": "^1.0.11",
