optimize: send email via amazon

--- a/example.env
+++ b/example.env
@@ -8,8 +8,14 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=mega-schedule
+DB_PASSWORD=123@123
+DB_DATABASE=mega_schedule
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
 APP_TOKEN=megaads@123
+
+MAIL_CONNECTION=smtp
+SMTP_HOST=email-smtp.us-west-2.amazonaws.com
+SMTP_PORT=465
+MAIL_USERNAME=
+MAIL_PASSWORD=
