--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@adonisjs/session": "^1.0.25",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/websocket": "^1.0.11",
+    "axios": "^1.7.7",
     "exceljs": "^4.4.0",
     "mysql": "^2.16.0",
     "node-schedule": "^1.1.1",
